0.3正式发布 windows fix